Tue Jun 27 17:33:59 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * PROBLEM-REPORT-FORM:

          Added a spot for the operating system and shell.

        * modules/ProjectCreator.pm:

          When creating the list of generated files, retain the original
          file extension.  If the original input file extension does not
          match the first extension listed in the custom definition inputext
          setting, the extension will be lost and file specific settings
          will not be applied correctly.

        * modules/WorkspaceCreator.pm:

          When adding implicit project dependencies, for the gnuace project
          type only, keep track of the indirect dependencies that have been
          followed to avoid infinite recursion.

Thu Jun 22 12:24:51 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/VC7WorkspaceCreator.pm:

          Modified the mixed language output so that VC8 does not want to
          save after the first load of the generated solution.

Wed Jun 21 14:16:22 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/VC7WorkspaceCreator.pm:

          Yet another bug fix for mixed language workspaces.  When a C++
          project is dependent upon another C++ project and a C# project,
          the dependee C++ project would be skipped.  Now, non-C++ projects
          will be built when the platform is changed to anything other than
          'Any CPU' or .NET.

Tue Jun 20 13:53:05 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * templates/automake.mpd:

          Tweak "code" that emits -stamp dependency to work with stamp
          files in subdirectories.

Tue Jun 20 18:31:35 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * templates/vc8csharp.mpd:

          Added the ability to set the RegisterForComInterop setting as a
          template variable.

Tue Jun 20 17:06:50 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm: