@@ -3378,11 +3378,12 @@ sub get_command_subs {
   }
 
   ## Add the project specific compatibility commands
-  $valid{'gt'}    = $self->get_gt_symbol();
-  $valid{'lt'}    = $self->get_lt_symbol();
-  $valid{'and'}   = $self->get_and_symbol();
-  $valid{'or'}    = $self->get_or_symbol();
-  $valid{'quote'} = $self->get_quote_symbol();
+  $valid{'gt'}     = $self->get_gt_symbol();
+  $valid{'lt'}     = $self->get_lt_symbol();
+  $valid{'and'}    = $self->get_and_symbol();
+  $valid{'or'}     = $self->get_or_symbol();
+  $valid{'quote'}  = $self->get_quote_symbol();
+  $valid{'equote'} = $self->get_escaped_quote_symbol();
 
   return \%valid;
 }
@@ -4597,6 +4598,11 @@ sub validated_directory {
 }
 
 sub get_quote_symbol {
+  #my($self) = shift;
+  return '"';
+}
+
+sub get_escaped_quote_symbol {
   #my($self) = shift;
   return '\\"';
 }
