@@ -1,3 +1,14 @@
+Thu Jun 29 16:33:13 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>
+
+        * README:
+        * modules/ProjectCreator.pm:
+        * modules/XMLProjectBase.pm:
+
+          Fixed a bug where a backslash was added to the front of a double
+          quote when the <%quote%> pseudo variable is used.  If an escaped
+          double quote is required, use <%equote%> (as described in the
+          README).
+
 Tue Jun 27 17:33:59 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>
 
         * PROBLEM-REPORT-FORM:
